# autoware_adapi_msgs

autoware_adapi_v1_msgs/: CMakeLists.txt
autoware_adapi_v1_msgs/operation_mode/msg/: OperationModeState.msg
autoware_adapi_v1_msgs/planning/msg/: PlanningBehavior.msg  SteeringFactor.msg
autoware_adapi_v1_msgs/resource/msg/: ResourceHash.msg  ResourceHashArray.msg
autoware_adapi_v1_msgs/system/msg/: MetricArray.msg
autoware_adapi_v1_msgs/temp/: AutowareLauncherCommand.srv  DoorStatusArray.msg  FailSafeExternalStop.srv  RecognitionArea.msg  RecognitionAreaArray.msg
autoware_adapi_v1_msgs/vehicle/msg/: VehicleStatus.msg
